# custom-logger

./: CMakeLists.txt  README.md
cmake/: loggerConfig.cmake.in
examples/: main.cpp
include/: log_code.h  log_level.h  log_message.h  logger.h
logs/: decoded_app_log.txt
src/: logger.cpp
tools/: decode_log.py  log_mappings.json
